# hamcrest-rust

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md
src/: core.rs  lib.rs
src/hamcrest/: core.rs  lib.rs
src/hamcrest/matchers/: close_to.rs  equal_to.rs  existing_path.rs  is.rs  none.rs  vecs.rs
src/matchers/: all_of.rs  any_of.rs  anything.rs  boolean.rs  close_to.rs  compared_to.rs  equal_to.rs  existing_path.rs  is.rs  mod.rs  none.rs  regex.rs  type_of.rs  vecs.rs
tests/: all_of.rs  any_of.rs  anything.rs  boolean.rs  close_to.rs  compared_to.rs  comparisons.rs  equal_to.rs  existing_path.rs  none.rs  prelude.rs  regex.rs  type_of.rs  vecs.rs
