[project]
name = "hamcrest"
description = "A port of the Hamcrest testing library"
version = "0.1.3"
keywords = ["unit", "matcher", "testing", "assertions", "tdd"]
categories = ["development-tools", "development-tools::testing", "development-tools::profiling"]
license = "MIT/Apache-2.0"
repository = "https://github.com/carllerche/hamcrest-rust"
documentation = "https://docs.rs/hamcrest"
readme = "README.md"
authors = [
  "Carl Lerche <me@carllerche.com>",
  "Alex Crichton <alex@alexcrichton.com>",
  "Ben Longbons <b.r.longbons@gmail.com>",
  "Graham Dennis <graham.dennis@gmail.com>",
  "Michael Gehring <mg@ebfe.org>",
  "Oliver Mader <b52@reaktor42.de>",
  "Robin Gloster <robin@loc-com.de>",
  "Steve Klabnik <steve@steveklabnik.com>",
  "Tamir Duberstein <tamird@gmail.com>",
  "Thiago Pontes <thiagopnts@gmail.com>",
  "Urban Hafner <contact@urbanhafner.com>",
  "Valerii Hiora <valerii.hiora@gmail.com>",
  "Yehuda Katz <wycats@gmail.com>",
  "Ian Létourneau <letourneau.ian@gmail.com>",
  "Matt LaChance <mattlach@umich.edu>",
]

[dependencies]
num = "0.1.36"
regex = "0.1.77"
